searxng/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: searxng
  labels:
    istio.io/use-waypoint: waypoint
