searxng/40-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: searxng
  labels:
    app: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      serviceAccountName: searxng
      containers:
        - name: searxng
          image: searxng/searxng:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/searxng
              readOnly: false
            - name: custom-css
              mountPath: /usr/local/searxng/searx/static/themes/simple/css/custom.css
              subPath: custom.css
            - name: base-template
              mountPath: /usr/local/searxng/searx/templates/simple/base.html
              subPath: base.html


          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

      volumes:
        - name: config
          configMap:
            name: searxng-config
        - name: custom-css
          configMap:
            name: searxng-custom-css
        - name: base-template
          configMap:
            name: searxng-base-template
