searxng/75-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: searxng-egress
  namespace: searxng
spec:
  podSelector:
    matchLabels:
      app: searxng
  policyTypes:
    - Egress
  egress:
    # Allow DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    # Allow traffic to tailscale-proxy only
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-proxy
      ports:
        - port: 1055
          protocol: TCP
    # Allow traffic to istio control plane
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
